--- a/resources/js/src/assets/table.css
+++ b/resources/js/src/assets/table.css
@@ -3,15 +3,15 @@
     color: rgb(33, 43, 54);
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     background-image: none;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     box-shadow: rgba(145, 158, 171, 0.2) 0 0 2px 0, rgba(145, 158, 171, 0.12) 0 12px 24px -4px;
     border-radius: 16px;
     z-index: 0;
+    width: 100%;
 }
 
 .table-tabs {
-    overflow: hidden;
     min-height: 48px;
     display: flex;
     padding-left: 20px;
@@ -23,16 +23,6 @@
     display: flex;
     white-space: nowrap;
 }
-
-/*.table-tablist {*/
-/*    scrollbar-width: none;*/
-/*    -ms-overflow-style: none;*/
-/*}*/
-
-/*.table-tablist::-webkit-scrollbar {*/
-/*    display: none;*/
-/*}*/
-
 
 .table-tablist > *:not(:last-child) {
     margin-right: 40px;
